[package]
name = "nixos-conjurer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.0"
flate2 = "^1.0"
ipc-channel = "^0.16"
nix = { version = "^0.25", default-features = false, features = [ "user", "sched", "signal", "fs", "mount" ] }
reqwest = { version = "^0.11", default-features = false, features = [ "rustls-tls", "blocking" ] }
serde = { version = "^1.0", default-features = false, features = [ "derive" ] }
serde_yaml = "^0.8"
sha2 = "^0.10"
tar = { version = "^0.4", default-features = false }
tempdir = "^0.3"
walkdir = "^2"
